# dbt-tutorial

./: .env  .gitignore  Dockerfile  README.md  dbt_project.yml  pyproject.toml
jaffle_shop/models/: schema.yml
